--- a/pom.xml
+++ b/pom.xml
@@ -194,41 +194,6 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.3</version><!--$NO-MVN-MAN-VER$ -->
-				<executions>
-					<execution>
-						<id>startLdapServer</id>
-						<phase>test-compile</phase>
-						<configuration>
-							<tasks unless="maven.test.skip">
-								<property name="execution.path" refid="maven.runtime.classpath"></property>
-								<ant antfile="${basedir}/misc/build-runldap.xml" target="startLdapServer"></ant>
-							</tasks>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>stopLdapServer</id>
-						<phase>test</phase>
-						<configuration>
-							<tasks unless="maven.test.skip">
-								<property name="execution.path" refid="maven.runtime.classpath"></property>
-								<property name="plugin.path" refid="maven.plugin.classpath"></property>
-								<ant antfile="${basedir}/misc/build-runldap.xml" target="stopLdapServer"></ant>
-							</tasks>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
 			<!-- build a JAR of the test classes for use in the sample -->
 			<!-- this MUST appear before the assembly plugin in the pom.xml file to 
 				make sure that the JAR exists before packaging -->
@@ -352,6 +317,19 @@
 		</profile>
 		<profile>
 			<id>opendj</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.forgerock.opendj</groupId>
+					<artifactId>opendj-server</artifactId>
+					<version>2.4.4-SNAPSHOT</version>
+					<type>jar</type>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -367,9 +345,55 @@
 								</goals>
 								<configuration>
 									<sources>
-										<source>src/test/java/org/lsc/opendj</source>
+										<source>src/opendj/java</source>
 									</sources>
 								</configuration>
+							</execution>
+ 							<execution>
+								<id>add-resource</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>add-resource</goal>
+								</goals>
+								<configuration>
+									<resources>
+										<resource><directory>src/opendj/resources</directory></resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.3</version><!--$NO-MVN-MAN-VER$ -->
+						<executions>
+							<execution>
+								<id>startLdapServer</id>
+								<phase>test-compile</phase>
+								<configuration>
+									<tasks unless="maven.test.skip">
+										<property name="execution.path" refid="maven.runtime.classpath"></property>
+										<ant antfile="${basedir}/misc/build-runldap.xml" target="startLdapServer"></ant>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>stopLdapServer</id>
+								<phase>test</phase>
+								<configuration>
+									<tasks unless="maven.test.skip">
+										<property name="execution.path" refid="maven.runtime.classpath"></property>
+										<property name="plugin.path" refid="maven.plugin.classpath"></property>
+										<ant antfile="${basedir}/misc/build-runldap.xml" target="stopLdapServer"></ant>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
 							</execution>
 						</executions>
 					</plugin>
@@ -591,14 +615,6 @@
 			<artifactId>unboundid-ldapsdk</artifactId>
 			<version>1.1.4</version>
 			<type>jar</type>
-			<optional>false</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.forgerock.opendj</groupId>
-			<artifactId>opendj-server</artifactId>
-			<version>2.4.4-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
 			<optional>false</optional>
 		</dependency>
 		<dependency>
