--- a/pom.xml
+++ b/pom.xml
@@ -438,16 +438,6 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>java.net Maven 2</id>
-			<url>http://download.java.net/maven/2</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
 			<id>JBoss repository</id>
 			<url>http://repository.jboss.org/maven2/</url>
 			<releases>
@@ -456,6 +446,16 @@
 			<snapshots>
 				<enabled>false</enabled>
 				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>java.net Maven 2</id>
+			<url>http://download.java.net/maven/2</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<repository>
@@ -681,6 +681,56 @@
 			<artifactId>ocutil</artifactId>
 			<version>2.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.xadisk</groupId>
+			<artifactId>xadisk</artifactId>
+			<version>1.1</version>
+		</dependency>
+        <dependency>
+            <groupId>javax.resource</groupId>
+            <artifactId>connector-api</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javaee</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>5</version>
+        </dependency>
+		<dependency>
+		  <groupId>org.codehaus.btm</groupId>
+		  <artifactId>btm</artifactId>
+		  <version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+	      <groupId>org.apache.directory.server</groupId>
+	      <artifactId>apacheds-all</artifactId>
+	      <version>1.5.7</version>
+	    </dependency>  
+	    <dependency>
+	      <groupId>org.apache.directory.server</groupId>
+	      <artifactId>apacheds-server-integ</artifactId>
+	      <version>1.5.7</version>
+	    </dependency>  
+	    <dependency>
+	      <groupId>org.apache.directory.server</groupId>
+	      <artifactId>apacheds-core-integ</artifactId>
+	      <version>1.5.7</version>
+	    </dependency>  
+	    <dependency>
+	      <groupId>commons-io</groupId>
+	      <artifactId>commons-io</artifactId>
+	      <version>1.4</version>
+	    </dependency>
 	</dependencies>
 
 	<distributionManagement>
