--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<tapestry-release-version>5.2.5</tapestry-release-version>
+		<jmockit-version>0.999.10</jmockit-version>
 	</properties>
 
 	<build>
@@ -150,7 +151,7 @@
 						-Dcom.sun.management.jmxremote.port=1099
 						-Dcom.sun.management.jmxremote.authenticate=false
 						-Dcom.sun.management.jmxremote.ssl=false
-						-javaagent:"${settings.localRepository}"/mockit/jmockit/0.999.10/jmockit-0.999.10.jar</argLine>
+						-javaagent:"${settings.localRepository}"/mockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar</argLine>
 				</configuration>
 			</plugin>
 
@@ -611,13 +612,6 @@
 			<optional>false</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.unboundid</groupId>
-			<artifactId>unboundid-ldapsdk</artifactId>
-			<version>1.1.4</version>
-			<type>jar</type>
-			<optional>false</optional>
-		</dependency>
-		<dependency>
 			<groupId>com.sleepycat</groupId>
 			<artifactId>je</artifactId>
 			<version>4.1.10</version>
@@ -666,7 +660,7 @@
 		<dependency>
 			<groupId>mockit</groupId>
 			<artifactId>jmockit</artifactId>
-			<version>0.999.10</version>
+			<version>${jmockit-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
