--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,7 @@
 				<dependency>
 					<groupId>org.forgerock.opendj</groupId>
 					<artifactId>opendj-server</artifactId>
-					<version>2.4.4-SNAPSHOT</version>
+					<version>2.4.5</version>
 					<type>jar</type>
 					<scope>compile</scope>
 					<optional>false</optional>
