--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.lsc</groupId>
 	<artifactId>lsc-core</artifactId>
 	<name>Ldap Synchronization Connector</name>
-	<version>2.0rc2</version>
+	<version>2.0-SNAPSHOT</version>
 	<description>
 		This project is the Ldap Synchronization Connector which
 		simplifies synchronizations between relation databases and LDAP
@@ -116,9 +116,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:svn:https://lsc-project.org/svn/lsc/tags/2.0rc2</connection>
-		<developerConnection>scm:svn:https://lsc-project.org/svn/lsc/tags/2.0rc2</developerConnection>
-		<url>http://tools.lsc-project.org/repositories/browse/lsc/lsc/tags/2.0rc2</url>
+		<connection>scm:svn:https://lsc-project.org/svn/lsc/branches/v2.0</connection>
+		<developerConnection>scm:svn:https://lsc-project.org/svn/lsc/branches/v2.0</developerConnection>
+		<url>http://tools.lsc-project.org/repositories/browse/lsc/lsc/branches/v2.0</url>
 	</scm>
 
 	<organization>
