--- a/pom.xml
+++ b/pom.xml
@@ -484,7 +484,7 @@
 		<repository>
 			<id>maven.forgerock.org</id>
 			<name>maven.forgerock.org-snapshot</name>
-			<url>http://maven.forgerock.org/repo/release</url>
+			<url>http://maven.forgerock.org/repo/releases</url>
 		</repository>
 		<repository>
 			<id>oracleReleases</id>
